--- a/NameToGive/build.xml
+++ b/NameToGive/build.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" ?>
+
 <project name="NameToGive" default="jarfile">
 
     <target name="init" description="Initializes properties">
@@ -8,7 +9,7 @@
         <property name="build.dir" value="build" />
         <property name="lib.dir" value="lib" />
         <property name="classes.dir" value="${build.dir}/classes" />
-        <property name="resources.dir" value="org.academiadecodigo.tropaDelete.resources" />
+        <property name="resources.dir" value="Resources" />
         <path id="classpath">
             <fileset dir="${lib.dir}" includes="**/*.jar" />
         </path>
